; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_double_set.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_double_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_node = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { double, double }

@MPV_FORMAT_INT64 = common dso_local global i64 0, align 8
@MPV_FORMAT_DOUBLE = common dso_local global i64 0, align 8
@M_OPT_UNKNOWN = common dso_local global i32 0, align 4
@M_OPT_OUT_OF_RANGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, %struct.mpv_node*)* @double_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @double_set(i32* %0, i8* %1, %struct.mpv_node* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.mpv_node*, align 8
  %8 = alloca double, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.mpv_node* %2, %struct.mpv_node** %7, align 8
  %9 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %10 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @MPV_FORMAT_INT64, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %16 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load double, double* %17, align 8
  store double %18, double* %8, align 8
  br label %33

19:                                               ; preds = %3
  %20 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %21 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @MPV_FORMAT_DOUBLE, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %30

25:                                               ; preds = %19
  %26 = load %struct.mpv_node*, %struct.mpv_node** %7, align 8
  %27 = getelementptr inbounds %struct.mpv_node, %struct.mpv_node* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = load double, double* %28, align 8
  store double %29, double* %8, align 8
  br label %32

30:                                               ; preds = %19
  %31 = load i32, i32* @M_OPT_UNKNOWN, align 4
  store i32 %31, i32* %4, align 4
  br label %43

32:                                               ; preds = %25
  br label %33

33:                                               ; preds = %32, %14
  %34 = load i32*, i32** %5, align 8
  %35 = call i64 @clamp_double(i32* %34, double* %8)
  %36 = icmp slt i64 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %33
  %38 = load i32, i32* @M_OPT_OUT_OF_RANGE, align 4
  store i32 %38, i32* %4, align 4
  br label %43

39:                                               ; preds = %33
  %40 = load double, double* %8, align 8
  %41 = load i8*, i8** %6, align 8
  %42 = bitcast i8* %41 to double*
  store double %40, double* %42, align 8
  store i32 1, i32* %4, align 4
  br label %43

43:                                               ; preds = %39, %37, %30
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i64 @clamp_double(i32*, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
